# asm-2-term

./: .gitignore
01_numeral_systems/: 01_octal.c  02_triple.c  03_sum.c  04_bignum_bin_sum.c  05_hexen.c  06_elong_add.c  07_toLongN.c  08_setun.c  09_any.c  10_rational.c  11_rome2arabic.c  12_Q.c  13_base.c  14_i.c  15_drob.c  CMakeLists.txt
02_data_storage_and_representation/: 01_bit_0.c  02_rwx.c  03_bit_1.c  04_bit_2.c  05_bit_3.c  06_bit_4.c  07_bit_5.c  08_broadcast.c  09_complement.c  10_size.c  11_eratosfen.c  12_virus.c  13_Meteorit.c  14_showdouble.c  15_sum.c  16_base64.c  17_float.c  CMakeLists.txt
03_neo_meets_architect/: 01_cpu.c  02_cache.c  03_neo.c  04_flag.c  05_cuda.c  CMakeLists.txt
04_memory/: CMakeLists.txt
05_adventures_of_electronic /: 04_disable.c  05_estimated.c  CMakeLists.txt
06_duck_stories/: 01_keygen.c  02_crack.c  03_tablet.c
07_embedded_x86_and_x86_64_assembly/: 01_zero.s  03_next.s  04_prev.s  05_sum.s  06_sub.s  07_imul.s  08_idiv.s  09_lea.s  10_lea1.s  11_lea32.s  12_egalite.s  13_Factorial.s  14_Factorial64.s  15_AntiFa.s  16_AntiFa64.s  17_vector.s  CMakeLists.txt
08_nasm_and_gas/: 01_A.s  02_B.s  03_C.s  04_D.s  05_E.s  06_F.s  07_G64.s  08_H.s  09_I.s  10_J.s  11_K.s  12_M.s  13_N.s  14_O.s  15_P.s  CMakeLists.txt
09_intelligent_duck_stories/: 01_keygen-x86.c  02_crack-x86.c  03_tablet-x86.c  05_object.c  06_vendor.c  07_antideb.c  09_Q.c  CMakeLists.txt
